--- a/Contact me.html
+++ b/Contact me.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Contact me</h1>
-        <img src="Beach%20picture.jpg" width="190" height="250">
+        <img src ="/Pictures/Beach%20picture.jpg" width="" height="250">
     </body>
 </html>
