--- a/Drawings.html
+++ b/Drawings.html
@@ -12,11 +12,13 @@
         <img src="/Pictures/Glasses.jpg" width="" height="250">
         <img src="/Pictures/Ugg%20boots.jpg" width="" height="250">
         <img src="/Pictures/McLaren.jpg" width="" height="250">
+        <img src="/Pictures/Tigger.JPG" width="" height="250">
         
         <h3>Other Media</h3>
         <img src="Pictures/Cross.jpg" width="" height="250">
         <img src="Pictures/Cups.jpg" width="" height="250">
         <img src="Pictures/Turtles.jpg" width="" height="250">
+        <img src="/Pictures/Owls.jpg" width="" height="250">
         
         <h3> Digital Media </h3>
         <img src="Pictures/Pantheon%20Inspired.jpg" width="" height="250">
