Added descriptions for Outside the Classroom as well as made the menu bar present on all pages

--- a/Animations.html
+++ b/Animations.html
@@ -2,11 +2,21 @@
 <html lang = "en">
     <head>
         <meta charset="ut-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title> KM Portfolio - Animations </title>
     </head>
     <body>
         <h1>Animations</h1>
-        <h3> Hi! </h3>
+        <div class = "top">
+        <ul> 
+        	<li class="nav"><a href="#">Home</a></li>
+        	<li class="nav"><a href="Animations.html">Animations</a></li>
+        	<li class="nav"><a href="Drawings.html">Drawings</a></li>
+        	<li class="nav"><a href="Outside the Classroom.html">Outside the Classroom</a></li>
+        	<li class="nav"><a href="Contact me.html">Contact me</a></li>
+        </ul>
+        </div>
+        <p> I first realized my interest in animation when I was a Junior in High School. I've been doing little projects through an online Animation Course for the past year. I know I still have lots to learn, but here are some of my basic projects so far.</p>
         
         <h3>The Basics: Bouncing Ball</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/37wyy6at2Nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
