--- a/Contact me.html
+++ b/Contact me.html
@@ -2,11 +2,22 @@
 <html lang = "en">
     <head>
         <meta charset="ut-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title> KM Portfolio - Contact me </title>
         
     </head>
     <body>
-        <h1>Contact me</h1>
+        <div class = "top">
+        <h1> Contact Me</h1>
+        <ul> 
+        	<li class="nav"><a href="#">Home</a></li>
+        	<li class="nav"><a href="Animations.html">Animations</a></li>
+        	<li class="nav"><a href="Drawings.html">Drawings</a></li>
+        	<li class="nav"><a href="Outside the Classroom.html">Outside the Classroom</a></li>
+        	<li class="nav"><a href="Contact me.html">Contact me</a></li>
+        </ul>
+        </div>
+        <hr>
         <img src ="/Pictures/Beach%20picture.jpg" width="" height="250">
     </body>
 </html>
