--- a/Drawings.html
+++ b/Drawings.html
@@ -2,11 +2,21 @@
 <html lang = "en">
     <head>
         <meta charset="ut-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title> KM Portfolio - Drawings </title>
     </head>
     <body>
-        <h1>Drawings</h1>
-        
+        <div class = "top">
+        <h1> Drawings</h1>
+        <ul> 
+        	<li class="nav"><a href="#">Home</a></li>
+        	<li class="nav"><a href="Animations.html">Animations</a></li>
+        	<li class="nav"><a href="Drawings.html">Drawings</a></li>
+        	<li class="nav"><a href="Outside the Classroom.html">Outside the Classroom</a></li>
+        	<li class="nav"><a href="Contact me.html">Contact me</a></li>
+        </ul>
+        </div>
+        <hr>
         <h3> Graphite</h3>
         <img src="/Pictures/Largemouth%20Bass.jpg" width="" height="250">
         <img src="/Pictures/Glasses.jpg" width="" height="250">
