--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         	<li class="nav"><a href="Contact me.html">Contact me</a></li>
         </ul>
         </div>
+        <hr>
         <main>
             <section>
                 <p> Hello! my name is Katherine Mittleider, and I am a Computational Media major at Georgia Tech. I love everything relating to animation and digital media. </p>
             </section>
         
             <aside>
-                <img class="animated-gif" src='//gifs.com/embed/hello-wave-81Z4l5' frameborder='0' scrolling='no' width='242px' height='360px' style='-webkit-backface-visibility: hidden;-webkit-transform: scale(1);' ></iframe>
+                <iframe src='//gifs.com/embed/hello-wave-81Z4l5' frameborder='0' scrolling='no' width='242px' height='360px' style='-webkit-backface-visibility: hidden;-webkit-transform: scale(1);' ></iframe>
             </aside>
         </main>
         
