Spacing update and more CSS

--- a/Drawings.html
+++ b/Drawings.html
@@ -9,7 +9,7 @@
         <div class = "top">
         <h1> Drawings</h1>
         <ul> 
-        	<li class="nav"><a href="#">Home</a></li>
+        	<li class="nav"><a href="index.html">Home</a></li>
         	<li class="nav"><a href="Animations.html">Animations</a></li>
         	<li class="nav"><a href="Drawings.html">Drawings</a></li>
         	<li class="nav"><a href="Outside the Classroom.html">Outside the Classroom</a></li>
@@ -17,21 +17,33 @@
         </ul>
         </div>
         <hr>
-        <h3> Graphite</h3>
-        <img src="/Pictures/Largemouth%20Bass.jpg" width="" height="250">
-        <img src="/Pictures/Glasses.jpg" width="" height="250">
-        <img src="/Pictures/Ugg%20boots.jpg" width="" height="250">
-        <img src="/Pictures/McLaren.jpg" width="" height="250">
-        <img src="/Pictures/Tigger.JPG" width="" height="250">
+        <main class = "main">
+        <div class = "drawings">
+            <h3> Graphite</h3>
+                <img src="/Pictures/Largemouth%20Bass.jpg" width="" height="250">
+                <p> </p>
+                <img src="/Pictures/Glasses.jpg" width="" height="250">
+                <p> </p>
+                <img src="/Pictures/Ugg%20boots.jpg" width="" height="250">
+                <p> </p>
+                <img src="/Pictures/McLaren.jpg" width="" height="250">
+                <p> </p>
+                <img src="/Pictures/Tigger.JPG" width="" height="250">
+                <p> </p>
         
-        <h3>Other Media</h3>
-        <img src="Pictures/Cross.jpg" width="" height="250">
-        <img src="Pictures/Cups.jpg" width="" height="250">
-        <img src="Pictures/Turtles.jpg" width="" height="250">
-        <img src="/Pictures/Owls.jpg" width="" height="250">
+            <h3>Other Media</h3>
+                <img src="Pictures/Cross.jpg" width="" height="250">
+                <p> </p>
+                <img src="Pictures/Cups.jpg" width="" height="250">
+                <p> </p>
+                <img src="Pictures/Turtles.jpg" width="" height="250">
+                <p> </p>
+                <img src="/Pictures/Owls.jpg" width="" height="250">
+                <p> </p>
         
-        <h3> Digital Media </h3>
-        <img src="Pictures/Pantheon%20Inspired.jpg" width="" height="250">
-
+            <h3> Digital Media </h3>
+                <img src="Pictures/Pantheon%20Inspired.jpg" width="" height="250">
+        </div>
+        </main>
     </body>
 </html>
