Coming to a close - more CSS and formatting

--- a/Drawings.html
+++ b/Drawings.html
@@ -20,29 +20,30 @@
         <main class = "main">
         <div class = "drawings">
             <h3> Graphite</h3>
-                <img src="/Pictures/Largemouth%20Bass.jpg" width="" height="250">
+                <img src="/Pictures/Largemouth%20Bass.jpg" class = "img">
                 <p> </p>
-                <img src="/Pictures/Glasses.jpg" width="" height="250">
+                <img src="/Pictures/Glasses.jpg" class = "img">
                 <p> </p>
-                <img src="/Pictures/Ugg%20boots.jpg" width="" height="250">
+                <img src="/Pictures/Ugg%20boots.jpg" class = "img">
                 <p> </p>
-                <img src="/Pictures/McLaren.jpg" width="" height="250">
+                <img src="/Pictures/McLaren.jpg" class = "img">
                 <p> </p>
-                <img src="/Pictures/Tigger.JPG" width="" height="250">
+                <img src="/Pictures/Tigger.JPG" class = "img">
                 <p> </p>
         
             <h3>Other Media</h3>
-                <img src="Pictures/Cross.jpg" width="" height="250">
+                <img src="Pictures/Cross.jpg" class = "img">
                 <p> </p>
-                <img src="Pictures/Cups.jpg" width="" height="250">
+                <img src="Pictures/Cups.jpg" class = "img">
                 <p> </p>
-                <img src="Pictures/Turtles.jpg" width="" height="250">
+                <img src="Pictures/Turtles.jpg" class = "img">
                 <p> </p>
-                <img src="/Pictures/Owls.jpg" width="" height="250">
+                <img src="/Pictures/Owls.jpg" class = "img">
                 <p> </p>
         
             <h3> Digital Media </h3>
-                <img src="Pictures/Pantheon%20Inspired.jpg" width="" height="250">
+                <img src="Pictures/Pantheon%20Inspired.jpg" class = "img">
+            <p>...</p>
         </div>
         </main>
     </body>
