--- a/Contact me.html
+++ b/Contact me.html
@@ -10,7 +10,7 @@
         <div class = "top">
         <h1> Contact Me</h1>
         <ul> 
-        	<li class="nav"><a href="#">Home</a></li>
+        	<li class="nav"><a href="index.html">Home</a></li>
         	<li class="nav"><a href="Animations.html">Animations</a></li>
         	<li class="nav"><a href="Drawings.html">Drawings</a></li>
         	<li class="nav"><a href="Outside the Classroom.html">Outside the Classroom</a></li>
@@ -18,6 +18,16 @@
         </ul>
         </div>
         <hr>
-        <img src ="/Pictures/Beach%20picture.jpg" width="" height="250">
+        <main class = "main">
+        <div class="row">
+                <div class = "column" >
+                    <img src ="/Pictures/Beach%20picture.jpg" width= 100% max-height="850">
+                    <p>Thank you! <br> I look forward to talking soon.</p>
+                </div>
+                <div class = "columnr">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd2aiTfZnx6iGlFc5fZ-0le68PffR8Kn6r-1gSurAgKTr2gOg/viewform?embedded=true" width=100% height=850px frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+        </div>
+        </main>
     </body>
 </html>
