Other Media change

--- a/OtherMedia.html
+++ b/OtherMedia.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class = "top">
-        <h1> Drawings</h1>
+        <h1> Other Media </h1>
         <ul> 
         	<li class="nav"><a href="index.html">Home</a></li>
         	<li class="nav"><a href="Animations.html">Animations</a></li>
