--- a/Outside the Classroom.html
+++ b/Outside the Classroom.html
@@ -11,7 +11,7 @@
         <ul> 
         	<li class="nav"><a href="index.html">Home</a></li>
         	<li class="nav"><a href="Animations.html">Animations</a></li>
-        	<li class="nav"><a href="Drawings.html">Drawings</a></li>
+        	<li class="nav"><a href="OtherMedia.html">Other Media</a></li>
         	<li class="nav"><a href="Outside the Classroom.html">Outside the Classroom</a></li>
         	<li class="nav"><a href="Contact me.html">Contact me</a></li>
         </ul>
